improve error handling in showOneInventoryTaxa
